verticical align fix

--- a/media/styles/frontpage.css
+++ b/media/styles/frontpage.css
@@ -1,13 +1,19 @@
+.frontpageRow {
+	vertical-align:top;
+}
+
 .frontpageColumn {
 	margin:0px;
+	padding:0px;
 }
 
 #recent {
+	margin-top:0px;
 	padding-left:5px;
 	font-size:10pt;
 	text-align:left;
 	width:100%;
-	height:670px;
+/*	height:670px; */
 	overflow:auto;
 }
 
